<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_room" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_ฺbill" />
        <item
            android:id="@+id/nav_facility"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_facility" />
    </group>

    <item android:title="@string/admin">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_login" />
        </menu>
    </item>

</menu>
